2-network-policies/network-policies/1-ingress-production-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-default-deny-all
  namespace: production
spec:
  podSelector: {}
  ingress: []
