2-network-policies/network-policies/6-ingress-monitoring.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-default-deny-all
  namespace: monitoring
spec:
  podSelector: {}
  ingress: []
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-allow-traefik-to-access-prometheus-server
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: prometheus
      component: server
  ingress:
    - ports:
        - port: 9090
      from:
        - namespaceSelector:
            matchLabels:
              namespace: kube-system
          podSelector:
            matchLabels:
              app: traefik
---
# Note: The following rules can also be generated by helm chart but seem to cause Problems when there are no NWPs for prometheus server.
#       See demo/2-network-policies/prometheus/values.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-prometheus-alertmanager
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: prometheus
      component: alertmanager
  ingress:
  - ports:
    - port: 9093
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
          component: server
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: ingress-prometheus-kube-state-metrics
  namespace: monitoring
spec:
  podSelector:
    matchLabels:
      app: prometheus
      component: kube-state-metrics
  ingress:
  - ports:
    - port: 8080
      protocol: TCP
  - from:
    - podSelector:
        matchLabels:
          app: prometheus
          component: server
